Tweaked syncing of origin and origin layer registries and other stuff